# peaks2utr

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  annotate_3pUTR.sh  call_forward_peaks.sh  call_reverse_peaks.sh  environment.yml  install.sh  meta.yaml  peaks_to_UTR.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
demo/: Tb927_01_v5.1.gff  Tb927_09_v5.1.gff
peaks2utr/: __init__.py  __main__.py  annotations.py  collections.py  constants.py  criteria.py  exceptions.py  models.py  postprocess.py  preprocess.py  utils.py  validation.py
peaks2utr/demo/: Tb927_01_v5.1.gff
peaks_to_3pUTR/: criteria.py  peaks_to_UTR.py
recipes/: meta.yaml
results/c_elegans/: WormBase.I.mRNA.gff3  getutr_analysis.ipynb  getutr_output.gff3  matched_utr.ipynb  missed_utr.ipynb  novel_utr.ipynb  peaks2utr_analysis.ipynb  peaks2utr_output.gff3  utrme_analysis.ipynb  utrme_output.gff3
results/t_brucei/: original.html  peaks2utr_analysis.py  peaks2utr_extended.html  utrme_analysis.py
test/: test.py  test_reverse_peaks.broadPeak
tests/: Chr1.gff  Chr1.gtf  alternative_splicing.gtf  test_alternative_splicing.py  test_annotation.py  test_entrypoint.py  test_forward_peaks.broadPeak  test_output_formatting.py  test_validation.py
tests/case1/: case1.gtf  case1.ini  case1.new.gtf  case1_current.new.fixed.gtf  case1_current.new.gtf  forward_peaks.broadPeak  generate_picture.sh  test_case1.py
tests/case2/: case2.gtf  case2.ini  case2_current.new.fixed.gtf  case2_current.new.gtf  forward_peaks.broadPeak  generate_pictures.sh  reverse_peaks.broadPeak  test_case2.py
tests/case3/: case3.gtf  case3.ini  case3_current.new.gtf  forward_coverage_gaps.bed  generate_pictures.sh  reverse_coverage_gaps.bed  test_case3.py
tests/create_db/: case3.no_parent.gtf  forward_peaks.broadPeak  test_disable_infer_features.py
tests/do_pseudo/: E_GEOD_61252.12.slice.bam  E_GEOD_61252.12.slice.bam.bai  PVL_12_v1.fasta  PVL_12_v1.gff  forward_peaks.broadPeak  reverse_peaks.broadPeak  test_do_pseudo.py
tests/no_strand_overlap/: Chr1.gff  forward_peaks.broadPeak  (+2 more)
(+4 files in other folders)
