[metadata]
name = peaks2utr
version = 1.3.1
author = William Haese-Hill
author_email = william.haese-hill@glasgow.ac.uk
description = A robust, parallelized Python CLI for annotating three_prime_UTR
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/haessar/peaks2utr
license_files = file: LICENSE
license = GNU General Public License v3 (GPLv3)

classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only

[options]
packages = peaks2utr
include_package_data = True
python_requires = >=3.8, <3.12
install_requires =
    requests
    gffutils == 0.12
    pysam
    MACS2 == 2.2.9.1
    numpy >= 1.21.4, <= 1.26.4
    tqdm
    asgiref
    psutil
    pybedtools
    typing-extensions
    importlib-resources
    zipp

[options.entry_points]
console_scripts =
    peaks2utr = peaks2utr:main
    peaks2utr-demo = peaks2utr:demo
